[package]
name = "repology"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
